--- a/version.ini
+++ b/version.ini
@@ -1,5 +1,8 @@
 [quantum-script-extension-xml]
 version=2.0.0
-build=9
-date=2021-07-23
-time=16:34:04
+build=10
+date=2021-08-05
+time=20:38:18
+
+[quantum-script-extension-xml.dependency]
+quantum-script=2.0.0
